[ENG-1614] fix: adds checkbox word wrap (#611)

--- a/src/components/ui-base/Checkbox/checkbox.module.css
+++ b/src/components/ui-base/Checkbox/checkbox.module.css
@@ -34,6 +34,7 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.07);
     border: 1px solid var(--amp-colors-border);
     cursor: pointer;
+    flex: none;
 }
 
 .checkbox:hover {
